<?xml version="1.0" encoding="utf-8"?><!--

  This file is subject to the terms and conditions defined in
  file 'LICENSE', which is part of this source code package

  Autor: Felipe González
  Email: felipe.gonzalezalarcon94@gmail.com

  Copyright (c) 2022

  Last modified 07-03-22 16:42
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.figonzal.evaluatool.ui.evaluas.evalua5.modulo2.ReflexividadE5M2"
    tools:keep="@layout/activity_reflexividad_e5_m2">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <include
                android:id="@+id/tabla_baremo"
                layout="@layout/baremo_parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_t1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_4"
                app:layout_constraintEnd_toStartOf="@+id/guia_central"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toBottomOf="@+id/tabla_baremo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_tarea_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/tarea_1"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.01"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/it_aprobadas_t1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:hint="@string/aprobadas"
                        app:hintTextColor="@color/hintColorGreen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_tarea_1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_aprobadas_t1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:inputType="numberDecimal"
                            android:maxLength="3"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:hint="@string/reprobadas"
                        app:hintTextColor="@color/hintColorRed"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/it_aprobadas_t1"
                        app:layout_constraintStart_toStartOf="@+id/it_aprobadas_t1"
                        app:layout_constraintTop_toBottomOf="@+id/it_aprobadas_t1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_reprobadas_t1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:inputType="numberDecimal"
                            android:maxLength="3"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_izq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_der"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_central"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <include
                android:id="@+id/card_view_constantes"
                layout="@layout/estadisticos_card_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toStartOf="@+id/guia_central"
                app:layout_constraintTop_toBottomOf="@+id/tabla_baremo" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_subtotales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guia_central"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toBottomOf="@+id/card_view_t1"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_pd_sub_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/pd_subtotales"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_pd_subtotal_t1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/tarea_1_0_pts"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_pd_sub_total" />

                    <TextView
                        android:id="@+id/tv_pd_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/pd_total"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_pd_subtotal_t1" />

                    <TextView
                        android:id="@+id/tv_pd_total_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:text="@string/_0_pts"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_pd_total" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/card_view_final"
                layout="@layout/pd_final_card_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toStartOf="@+id/guia_central"
                app:layout_constraintTop_toBottomOf="@+id/card_view_constantes"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>