...
    <string name="igm_total" translatable="false" tools:keep="@string/igm_total">IGM Total</string>
    <string name="ige_total" translatable="false" tools:keep="@string/ige_total">IGE Total</string>

    <string name="PUNTAJE_DIRECTO" translatable="false">PD</string>
    <string name="PERCENTIL_CHILENO" translatable="false">Pc Chileno</string>
    <string name="icono_tabla_baremo" translatable="false" tools:keep="@string/icono_tabla_baremo">Icono tabla baremo</string>
    <string name="ver_tabla_de_baremos" translatable="false" tools:keep="@string/ver_tabla_de_baremos">Ver tabla de baremos</string>
    <string name="dialogo_boton_cerrar" translatable="false">Cerrar</string>
    <string name="dialogo_boton_aceptar" translatable="false" tools:keep="@string/dialogo_boton_aceptar">Aceptar</string>
    <string name="dialogo_boton_cancelar" translatable="false" tools:keep="@string/dialogo_boton_cancelar">Cancelar</string>
    <string name="dialogo_baremo_titulo" translatable="false" tools:keep="@string/dialogo_baremo_titulo">Tabla Baremo</string>
    <string name="dialogo_baremo_descripcion" translatable="false">Puntajes de tabla baremo de ítem</string>
    <string name="TOOLBAR_MOTIVACION" translatable="false">Motivación</string>
    <string name="TOOLBAR_AUTOCONTROL" translatable="false">Autocontrol</string>
...
