...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_baremo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@+id/btn_cerrar"
            app:layout_constraintEnd_toEndOf="@+id/tv_baremo_descripcion"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_baremo_descripcion"
            app:layout_constraintTop_toBottomOf="@+id/tv_baremo_descripcion"
            app:layout_constraintVertical_bias="0.0" />
...
